package Ejercicios.Resizable_Y_GeometricObject;
//Interfaz Geometric object (Todos los objetos que usen GeometricObject contendrán todos los métodos aqui presentes):
public interface GeometricObject {
    double getPerimeter();
    double getArea();
}
