package Ejercicios.Resizable_Y_GeometricObject;
//Interfaz de Resizable (todos los elementos que implementen resizable contendran sus métodos):
public interface Resizable {
    void resize(int percent);
}
